2003-12-05 Srinivasa Ragavan <sragavan@novell.com>

	* gnome-theme-installer.c (install_dialog_response): Fix for infinite 
	  loop, when trying to install themes from ~/.themes , #116224

2003-10-28  Jody Goldberg <jody@gnome.org>

	* Release 2.5.0

Tue Aug  5 15:38:31 2003  Jonathan Blandford  <jrb@redhat.com>

	* theme-properties.glade: Fix from Christian Neumair to fix
	default and focus, #116892

	* theme-install.glade: ditto

Mon Aug  4 14:14:53 2003  Jonathan Blandford  <jrb@redhat.com>

 	* gnome-theme-manager.c (idle_async_func): make sure that we have
	a valid theme_id, #104824

2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-07-02  Mark McLoughlin  <mark@skynet.ie>

	* gnome-theme-manager.c: (idle_async_func), (load_meta_themes):
	use the default image if the thumbnailer fails.

2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

Wed Jun 18 15:46:27 2003  Jonathan Blandford  <jrb@gnome.org>

	* Makefile.am (EXTRA_DIST): add $(desktop_icons_DATA)

2003-06-06 Mark Finlay <sisob@eircom.net>

 	* gnome-ccthemes.png
	* Makefile.am

	Add icon for the theme applet from gnome-desktop

2003-05-28  Christian Neumair  <chris@gnome-de.org>

	* theme-install.glade
	* theme-properties.glade:

	HIGified (#105004).

2003-05-13  Andrew Sobala  <aes@gnome.org>

	* Makefile.am: removed theme-thumbnail.[ch]
	* gnome-theme-manager.c: (meta_theme_selection_changed):
	theme-thumbnail is now in libcommon. Removed meta_theme_set; also now
	in libcommon.
	* theme-thumbnail.c: removed, now in libcommon
	* theme-thumbnail.h: removed, now in libcommon

2003-05-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.1

2003-05-03  Kjartan Maraas  <kmaraas@gnome.org>

	* theme-thumbnail.c: (create_image): Unref the
	icon_theme after using it.

2003-05-02  Kjartan Maraas  <kmaraas@gnome.org>

	* theme-properties.glade: Add a colon for consistency.
	Fixes bug #103923.

2003-04-29  Kjartan Maraas  <kmaraas@gnome.org>
