@@ -1,5 +1,10 @@
 2003-12-05 Srinivasa Ragavan <sragavan@novell.com>
 
+	* gnome-theme-installer.c (install_dialog_response): Fix for bug
+	  #127371, reporting invalid/ null file locations.
+
+2003-12-05 Srinivasa Ragavan <sragavan@novell.com>
+
 	* gnome-theme-installer.c (install_dialog_response): Fix for infinite 
 	  loop, when trying to install themes from ~/.themes , #116224
 
